Fix mobile overflows

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -12,3 +12,7 @@
 body {
     background-color: var(--Sand);
 }
+
+* {
+    min-width: 0;
+}
